generate proper targets for dep

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -216,31 +216,27 @@ target_include_directories(tangram-core
     include/tangram
     # TODO: These headers shouldn't be public, but Platform classes use them.
     src
-    # TODO: This header shouldn't be public, but we use it in propertyItem.h
-    deps/variant/include
   PRIVATE
     generated
-    deps
-    deps/earcut/include
-    deps/isect2d/include
-    deps/hash-library
     deps/mapbox
     ${MAPBOX_VARIANT_INCLUDE_DIRS}
-    deps/pbf
     ${RAPIDJSON_INCLUDE_DIRS}
-    deps/sdf
     ${GEOJSON_CPP_INCLUDE_DIRS}
     ${GEOJSON_VT_CPP_INCLUDE_DIRS}
-    deps/double-conversion/include
 )
 
 # Link core library dependencies.
 target_link_libraries(tangram-core
   PRIVATE
+  sdf
+  pbf
+  earcut
+  isect2d
   glm::glm
   css-color-parser-cpp
   yaml-cpp
   alfons
+  hashlib
   double-conversion
   miniz::miniz
   #ZLIB::ZLIB
