--- a/core/deps/CMakeLists.txt
+++ b/core/deps/CMakeLists.txt
@@ -5,6 +5,17 @@ if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wno-shorten-64-to-32)
 endif()
 
+add_subdirectory(hash-library)
+
+add_library(sdf INTERFACE)
+target_include_directories(sdf INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/sdf)
+add_library(pbf INTERFACE)
+target_include_directories(pbf INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+add_library(earcut INTERFACE)
+target_include_directories(earcut INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/earcut/include)
+add_library(isect2d INTERFACE)
+target_include_directories(isect2d INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/isect2d/include)
+
 ## css-color-parser-cpp ##
 ##########################
 add_library(css-color-parser-cpp css-color-parser-cpp/csscolorparser.cpp)
@@ -30,6 +41,7 @@ endif()
 ############
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/alfons)
 target_compile_definitions(alfons PRIVATE GLM_FORCE_CTOR_INIT)
+
 
 
 
