--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,10 +105,12 @@ jobs:
             - ios-ccache-v1-{{ .Branch }}-{{ .Environment.CIRCLE_SHA1 }}
             - ios-ccache-v1-{{ .Branch }}
             - ios-ccache-v1
+      - run: ccache --zero-stats
       # Build test app variants. Use simulator target to bypass codesigning.
       - run: make ios-sim BUILD_TYPE=Debug CMAKE_OPTIONS="-DTANGRAM_XCODE_USE_CCACHE=1"
       - run: make ios-static-sim BUILD_TYPE=Debug CMAKE_OPTIONS="-DTANGRAM_XCODE_USE_CCACHE=1"
       - run: make ios-swift-sim BUILD_TYPE=Debug CMAKE_OPTIONS="-DTANGRAM_XCODE_USE_CCACHE=1"
+      - run: ccache --show-stats
       - save_cache:
           key: ios-ccache-v1-{{ .Branch }}-{{ .Environment.CIRCLE_SHA1 }}
           paths:
@@ -127,6 +129,7 @@ jobs:
             - ios-release-ccache-v1-{{ .Branch }}-{{ .Environment.CIRCLE_SHA1 }}
             - ios-release-ccache-v1-{{ .Branch }}
             - ios-release-ccache-v1
+      - run: ccache --zero-stats
       # Build the framework and package it into pod.zip.
       - run: make ios-xcframework BUILD_TYPE=Release CMAKE_OPTIONS="-DTANGRAM_XCODE_USE_CCACHE=1"
       # Check that bitcode is included for required archs.
@@ -150,6 +153,7 @@ jobs:
             - run: brew install gh
             - run: mv ~/pod.zip ~/tangram-ios-<< pipeline.git.tag >>.zip
             - run: gh release upload << pipeline.git.tag >> ~/tangram-ios-<< pipeline.git.tag >>.zip
+      - run: ccache --show-stats
       - save_cache:
           key: ios-release-ccache-v1-{{ .Branch }}-{{ .Environment.CIRCLE_SHA1 }}
           paths:
