--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -210,6 +210,7 @@ workflows:
               only: main
       # Run on tag pushes
       - build-deploy-ios:
+          name: build-deploy-ios-tag
           filters:
             # For any tag of the form 1, 1.2.3, 1.4-beta2, etc. we will deploy a release build.
             tags:
