--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.14)
 
+option(USE_VCPKG "enable vcpkg dependency build" ON)
 # needs before first project() call
-if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
+if(USE_VCPKG AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
     set(VCPKG_OVERLAY_PORTS
       "${CMAKE_CURRENT_LIST_DIR}/vcpkg-ports/mapbox-geojson-vt-cpp" 
       "${CMAKE_CURRENT_LIST_DIR}/vcpkg-ports/mapbox-geojson-cpp"
