--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,16 +2,20 @@ cmake_minimum_required(VERSION 3.14)
 
 option(USE_VCPKG "enable vcpkg dependency build" ON)
 # needs before first project() call
+set(VCPKG_OVERLAY_PORTS
+  "${CMAKE_CURRENT_LIST_DIR}/vcpkg-ports/mapbox-geojson-vt-cpp" 
+  "${CMAKE_CURRENT_LIST_DIR}/vcpkg-ports/mapbox-geojson-cpp"
+  "${CMAKE_CURRENT_LIST_DIR}/vcpkg-ports/mapbox-geometry"
+  "${CMAKE_CURRENT_LIST_DIR}/vcpkg-ports/mapbox-variant"
+  "${CMAKE_CURRENT_LIST_DIR}/vcpkg-ports/glm"
+)
 if(USE_VCPKG AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
-    set(VCPKG_OVERLAY_PORTS
-      "${CMAKE_CURRENT_LIST_DIR}/vcpkg-ports/mapbox-geojson-vt-cpp" 
-      "${CMAKE_CURRENT_LIST_DIR}/vcpkg-ports/mapbox-geojson-cpp"
-      "${CMAKE_CURRENT_LIST_DIR}/vcpkg-ports/mapbox-geometry"
-      "${CMAKE_CURRENT_LIST_DIR}/vcpkg-ports/mapbox-variant"
-      "${CMAKE_CURRENT_LIST_DIR}/vcpkg-ports/glm"
-    )
     set(CMAKE_TOOLCHAIN_FILE "${CMAKE_CURRENT_LIST_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake")
 endif()
+if (VCPKG_TARGET_ANDROID)
+  include("cmake/vcpkg_android.cmake")
+endif()
+
 project(tangram)
 
 # Options
@@ -30,11 +34,7 @@ option(TANGRAM_DEV_MODE "For developers only: Don't omit the frame pointer" OFF)
 
 message(STATUS "Build type configuration: ${CMAKE_BUILD_TYPE}")
 
-# Check that submodules are present.
-if(NOT (WIN32 OR EXISTS "${PROJECT_SOURCE_DIR}/core/deps/harfbuzz-icu-freetype/harfbuzz/README"))
-  message(SEND_ERROR "Missing submodules - Please run:\n 'git submodule update --init'")
-  return()
-endif()
+
 
 if(CMAKE_BUILD_TYPE MATCHES Debug)
   add_definitions(-DDEBUG)
