--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -200,7 +200,9 @@ jobs:
       - checkout
       - run: git submodule update --init
       - run: choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System'
-      - run: cmake -S . -B build/windows -G "Visual Studio 16 2019"
+      - run: git clone --branch 2021.05.12 https://github.com/microsoft/vcpkg
+      - run: .\vcpkg\bootstrap-vcpkg.bat
+      - run: cmake -S . -B build/windows -G "Visual Studio 16 2019" -DCMAKE_TOOLCHAIN_FILE=./vcpkg/scripts/buildsystems/vcpkg.cmake
       - run: cmake --build build/windows
 workflows:
   version: 2
