--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -204,8 +204,11 @@ jobs:
       - run: .\vcpkg\bootstrap-vcpkg.bat
       - run: cmake -S . -B build/windows -G "Visual Studio 16 2019" -DCMAKE_TOOLCHAIN_FILE="$pwd\vcpkg\scripts\buildsystems\vcpkg.cmake"
       - run: cmake --build build/windows
+      - run:
+          command: tar -cvzf build.tar build/windows
+          when: always
       - store_artifacts:
-          path: build/windows/vcpkg-manifest-install.log
+          path: build.tar
 workflows:
   version: 2
   build-and-deploy:
