Install CMake version 3.20.5 to avoid vcpkg bug with 3.21

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -199,16 +199,11 @@ jobs:
     steps:
       - checkout
       - run: git submodule update --init
-      - run: choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System'
+      - run: choco install cmake --version 3.20.5 --installargs 'ADD_CMAKE_TO_PATH=System'
       - run: git clone --branch 2021.05.12 https://github.com/microsoft/vcpkg
       - run: .\vcpkg\bootstrap-vcpkg.bat
-      - run: cmake -S . -B build/windows -G "Visual Studio 16 2019" -DCMAKE_TOOLCHAIN_FILE="$pwd\vcpkg\scripts\buildsystems\vcpkg.cmake" --log-level=DEBUG
+      - run: cmake -S . -B build/windows -G "Visual Studio 16 2019" -DCMAKE_TOOLCHAIN_FILE="$pwd\vcpkg\scripts\buildsystems\vcpkg.cmake"
       - run: cmake --build build/windows
-      - run:
-          command: tar -cvzf build.tar build/windows
-          when: always
-      - store_artifacts:
-          path: build.tar
 workflows:
   version: 2
   build-and-deploy:
