Add vcpkg caching

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -196,15 +196,26 @@ jobs:
           path: ~/demo.zip
   build-test-windows:
     executor: win/default
+    environment:
+      VCPKG_VERSION: 2021.05.12
     steps:
       - checkout
       - run: git submodule update --init
       - run: choco install cmake --version 3.20.5 --installargs 'ADD_CMAKE_TO_PATH=System'
-      - run: git clone --branch 2021.05.12 https://github.com/microsoft/vcpkg
+      - run: git clone --branch $env:VCPKG_VERSION https://github.com/microsoft/vcpkg
       - run: .\vcpkg\bootstrap-vcpkg.bat
+      - restore_cache:
+          keys:
+            - windows-vcpkg-v1-{{ .Environment.VCPKG_VERSION }}
+            - windows-vcpkg-v1
       - run: 
           command: cmake -S . -B build/windows -G "Visual Studio 16 2019" -DCMAKE_TOOLCHAIN_FILE="$pwd\vcpkg\scripts\buildsystems\vcpkg.cmake"
           no_output_timeout: 30m
+      - save_cache:
+          key: windows-vcpkg-v1-{{ .Environment.VCPKG_VERSION }}
+          paths:
+            - vcpkg/installed
+            - vcpkg/packages
       - run: cmake --build build/windows
 workflows:
   version: 2
