--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,31 @@
 cmake_minimum_required(VERSION 3.14)
+include(cmake/get_tangram_version.cmake)
+include(cmake/vcpkg_setup.cmake)
+get_tangram_version()
+vcpkg_setup()
 
-option(USE_VCPKG "enable vcpkg dependency build" ON)
-# needs before first project() call
-set(VCPKG_OVERLAY_PORTS
-  "${CMAKE_CURRENT_LIST_DIR}/vcpkg-ports/mapbox-geojson-vt-cpp" 
-  "${CMAKE_CURRENT_LIST_DIR}/vcpkg-ports/mapbox-geojson-cpp"
-  "${CMAKE_CURRENT_LIST_DIR}/vcpkg-ports/mapbox-geometry"
-  "${CMAKE_CURRENT_LIST_DIR}/vcpkg-ports/mapbox-variant"
-  "${CMAKE_CURRENT_LIST_DIR}/vcpkg-ports/glm"
-)
-if(USE_VCPKG AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
-    set(CMAKE_TOOLCHAIN_FILE "${CMAKE_CURRENT_LIST_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake")
-endif()
-if (VCPKG_TARGET_ANDROID)
-  include("cmake/vcpkg_android.cmake")
-endif()
+project(tangram VERSION ${TANGRAM_VERSION})
 
-project(tangram)
+# set debug prefix for multi configuration generators
+set(CMAKE_DEBUG_POSTFIX "d")
+
+if(WIN32)
+    set(DEFAULT_BIN_DIR bin)
+    set(DEFAULT_LIB_DIR lib)
+    set(DEFAULT_ARCHIVE_DIR lib)
+else()
+    include(GNUInstallDirs)
+    set(DEFAULT_BIN_DIR ${CMAKE_INSTALL_BINDIR})
+    set(DEFAULT_LIB_DIR ${CMAKE_INSTALL_LIBDIR})
+    set(DEFAULT_ARCHIVE_DIR ${CMAKE_INSTALL_LIBDIR})
+endif()
+# https://cmake.org/cmake/help/latest/manual/cmake-buildsystem.7.html#runtime-output-artifacts
+set(TANGRAM_BIN_DIR ${DEFAULT_BIN_DIR} CACHE STRING "Install directory for binaries")
+# https://cmake.org/cmake/help/latest/manual/cmake-buildsystem.7.html#library-output-artifacts
+set(TANGRAM_LIB_DIR ${DEFAULT_LIB_DIR} CACHE STRING "Install directory for libraries")
+# https://cmake.org/cmake/help/latest/manual/cmake-buildsystem.7.html#archive-output-artifacts
+set(TANGRAM_ARCHIVE_DIR ${DEFAULT_ARCHIVE_DIR} CACHE STRING "Install directory for archives")
+set(INSTALL_CMAKE_DIR ${TANGRAM_LIB_DIR}/cmake/tangram CACHE STRING "Install directory of the cmake targets")
 
 # Options
 option(TANGRAM_USE_JSCORE "Use system libraries for JavaScriptCore and enable it on iOS and macOS" OFF)
@@ -34,7 +43,7 @@ option(TANGRAM_DEV_MODE "For developers only: Don't omit the frame pointer" OFF)
 
 message(STATUS "Build type configuration: ${CMAKE_BUILD_TYPE}")
 
-
+include(cmake/tangram_install.cmake)
 
 if(CMAKE_BUILD_TYPE MATCHES Debug)
   add_definitions(-DDEBUG)
@@ -106,3 +115,34 @@ if(TANGRAM_BUILD_BENCHMARKS)
   message(STATUS "Building benchmarks")
   add_subdirectory(bench)
 endif()
+
+
+# start package tangram
+include(CMakePackageConfigHelpers)
+write_basic_package_version_file(
+  "${CMAKE_CURRENT_BINARY_DIR}/tangramConfigVersion.cmake"
+  VERSION ${PROJECT_VERSION}
+  COMPATIBILITY ExactVersion
+)
+
+set(INCLUDE_INSTALL_DIR include/)
+configure_package_config_file(${CMAKE_CURRENT_SOURCE_DIR}/cmake/tangramConfig.cmake.in
+  "${CMAKE_CURRENT_BINARY_DIR}/tangramConfig.cmake"
+  INSTALL_DESTINATION ${INSTALL_CMAKE_DIR}
+  PATH_VARS INCLUDE_INSTALL_DIR
+)
+
+install(
+    FILES
+        "${CMAKE_CURRENT_BINARY_DIR}/tangramConfig.cmake"
+        "${CMAKE_CURRENT_BINARY_DIR}/tangramConfigVersion.cmake"
+    DESTINATION ${INSTALL_CMAKE_DIR}
+)
+
+install(EXPORT tangramTargets
+        FILE tangramTargets.cmake
+        NAMESPACE tangram::
+        DESTINATION ${INSTALL_CMAKE_DIR}
+)
+
+install(DIRECTORY vcpkg-ports/ DESTINATION ${CMAKE_INSTALL_PREFIX}/tangram-vcpkg-overlays)
