--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -9,6 +9,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: true
+      - name: "Cache vcpkg binaries"
+        uses: actions/cache@v2
+        with:
+          path: ~\AppData\Local\vcpkg\archives
+          key: vcpkg-v1-${{ hashFiles('vcpkg.json') }}
+          restore-keys: vcpkg-v1-
       - name: "Configure CMake"
         run: cmake -S . -B .\build -G "Visual Studio 16 2019" \
           -DCMAKE_TOOLCHAIN_FILE="$env:VCPKG_INSTALLATION_ROOT\scripts\buildsystems\vcpkg.cmake" \
