--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -22,6 +22,6 @@ jobs:
           -DTANGRAM_BUILD_TESTS=1
       - name: "Run Build"
         run: cmake --build .\build
-      - name: "Run Tests"
-        run: .\tests\Debug\tests.out.exe
-        working-directory: .\build
+      # - name: "Run Tests"
+      #   run: .\tests\Debug\tests.out.exe
+      #   working-directory: .\build
