Run brew update in pr-checks.yml

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -34,7 +34,9 @@ jobs:
         with:
           submodules: true
       - name: "Install dependencies"
-        run: brew install ninja ccache
+        run: |
+          brew update
+          brew install ninja ccache
       - name: "Cache ccache directory"
         uses: actions/cache@v2
         with:
