--- a/core/deps/CMakeLists.txt
+++ b/core/deps/CMakeLists.txt
@@ -13,13 +13,12 @@ target_compile_definitions(glm INTERFACE GLM_FORCE_CTOR_INIT)
 
 ## yaml-cpp ##
 ##############
-if (NOT MSVC)
+if(NOT TANGRAM_USE_VCPKG)
   set(YAML_CPP_BUILD_TESTS OFF CACHE BOOL "")
   set(YAML_CPP_BUILD_TOOLS OFF CACHE BOOL "")
   set(YAML_CPP_BUILD_CONTRIB OFF CACHE BOOL "")
   set(YAML_CPP_INSTALL OFF CACHE BOOL "")
   add_subdirectory(yaml-cpp)
-
   target_include_directories(yaml-cpp PUBLIC yaml-cpp/include)
 endif()
 
@@ -46,11 +45,10 @@ target_include_directories(miniz
   ${CMAKE_CURRENT_SOURCE_DIR}/miniz)
 
 
-
+## Harfbuzz - ICU-Common - Freetype2 ##
+#######################################
 if(NOT TANGRAM_USE_SYSTEM_FONT_LIBS)
-  ## Harfbuzz - ICU-Common - Freetype2 ##
-  #######################################
-  if(MSVC)
+  if(TANGRAM_USE_VCPKG)
     #find_package(ICU REQUIRED COMPONENTS common)
     find_package(harfbuzz CONFIG REQUIRED)
     set(HARFBUZZ_LIB_NAME harfbuzz::harfbuzz)
