Revert "Run brew update in pr-checks.yml"
This reverts commit d653b8bf7a6ca033daa2ba723358b74fbb051006.

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -40,9 +40,7 @@ jobs:
         with:
           submodules: true
       - name: "Install dependencies"
-        run: |
-          brew update
-          brew install ninja ccache
+        run: brew install ninja ccache
       - name: "Cache ccache directory"
         uses: actions/cache@v2
         with:
